Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60250

Assert in m_connectionsCounter.contains(object)

XMLWordPrintable

    • 446978af11ab886d734ca3972dcd73f847df9fbc 64306392ce3a7751bfb58e1352b212ad5cba8aec

      Steps to reproduce the issue:
      1. Run attached test application

      Expected outcome:
      No asserts occur

      Actual outcome:
      Application asserts

      ASSERT: "m_connectionsCounter.contains(object)" in file c:\users\qt\work\qt\qtwebchannel\src\webchannel\signalhandler_p.h, line 299
      

        1. qtbug-60250.tar.gz
          1 kB
          Kimmo Leppälä
        For Gerrit Dashboard: QTBUG-60250
        # Subject Branch Project Status CR V

            milianw Milian Wolff
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes