Gracefully handle early deregistration of objects

When an object is deregistered before the signal handler got
initializated, we asserted. Now, we check for this case and skip the
signal handler removal when it wasn't set up yet.

Change-Id: I1edb5fb4f1429e6c69c6c41baabd3d30a4b6fe10
Task-number: QTBUG-60250
Reviewed-by: Kai Dohmen <psykai1993@googlemail.com>
Reviewed-by: Konstantin Tokarev <annulen@yandex.ru>
(cherry picked from commit 446978af11ab886d734ca3972dcd73f847df9fbc)