tests/auto/webchannel/tst_webchannel.h
@@ -290,6 +290,7 @@ signals:
 private slots:
     void testRegisterObjects();
     void testDeregisterObjects();
+    void testDeregisterObjectAtStart();
     void testInfoForObject();
     void testInvokeMethodConversion();
     void testSetPropertyConversion();
